--- a/lesson-17/index.html
+++ b/lesson-17/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <ul class="products__nav nav">
                     <li class="nav__item item">
-                        <a class="item__nav-link" href="#" target="_blank">
+                        <a class="item__nav-link item__nav-link--underline" href="#" target="_blank">
                             Gold
                         </a>
                     </li>
@@ -109,49 +109,57 @@
                 </ul>
                 <div class="products__content content-prod">
                     <div class="content-prod__item item-prod">
-                        <div class="item-prod__image">
-                            <img src="img/content/our-products-small-01.webp"
-                                 alt="Small product picture - earrings">
-                        </div>
-                        <a class="item-prod__about-product" href="#">
-                            Embossed hoop earrings
-                        </a>
-                        <span>
+                        <a class="item-prod__card" href="#">
+                            <div class="item-prod__image">
+                                <img src="img/content/products-01.webp"
+                                     alt="Small product picture - earrings">
+                            </div>
+                            <h4 class="item-prod__about-product">
+                                Embossed hoop earrings
+                            </h4>
+                            <span>
                             $144.00
                         </span>
+                        </a>
                     </div>
                     <div class="content-prod__item item-prod">
-                        <div class="item-prod__image">
-                            <img src="img/content/our-products-small-02.webp" alt="Small product picture - earrings">
-                        </div>
-                        <a class="item-prod__about-product" href="#">
-                            Embossed hoop earrings
-                        </a>
-                        <span>
+                        <a class="item-prod__card" href="#">
+                            <div class="item-prod__image">
+                                <img src="img/content/products-02.webp" alt="Small product picture - earrings">
+                            </div>
+                            <h4 class="item-prod__about-product">
+                                Embossed hoop earrings
+                            </h4>
+                            <span>
                             $144.00
                         </span>
+                        </a>
                     </div>
                     <div class="content-prod__item item-prod">
-                        <div class="item-prod__image">
-                            <img src="img/content/our-products-small-03.webp" alt="Small product picture - earrings">
-                        </div>
-                        <a class="item-prod__about-product" href="#">
-                            Embossed hoop earrings
-                        </a>
-                        <span>
+                        <a class="item-prod__card" href="#">
+                            <div class="item-prod__image">
+                                <img src="img/content/products-03.webp" alt="Small product picture - earrings">
+                            </div>
+                            <h4 class="item-prod__about-product">
+                                Embossed hoop earrings
+                            </h4>
+                            <span>
                             $144.00
                         </span>
+                        </a>
                     </div>
                     <div class="content-prod__item item-prod">
-                        <div class="item-prod__image">
-                            <img src="img/content/our-products-small-04.webp" alt="Small product picture - earrings">
-                        </div>
-                        <a class="item-prod__about-product" href="#">
-                            Embossed hoop earrings
-                        </a>
-                        <span>
+                        <a class="item-prod__card" href="#">
+                            <div class="item-prod__image">
+                                <img src="img/content/products-04.webp" alt="Small product picture - earrings">
+                            </div>
+                            <h4 class="item-prod__about-product">
+                                Embossed hoop earrings
+                            </h4>
+                            <span>
                             $144.00
                         </span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -169,51 +177,76 @@
                 </div>
                 <div class="popular-prod__content content-prod">
                     <div class="content-prod__item item-prod">
-                        <div class="item-prod__image item-prod__image--contain">
-                            <img src="img/content/mostpop-small-01.webp" alt="Most popular product picture">
-                        </div>
-                        <a class="item-prod__about-product" href="#">
-                            Embossed hoop earrings
-                        </a>
-                        <span>
+                        <a class="item-prod__card" href="#">
+                            <div class="item-prod__image">
+                                <img src="img/content/mostpop-01.webp" alt="Most popular product picture">
+                            </div>
+                            <h4 class="item-prod__about-product">
+                                Embossed hoop earrings
+                            </h4>
+                            <span>
                             $144.00
                         </span>
+                        </a>
                     </div>
                     <div class="content-prod__item item-prod">
-                        <div class="item-prod__image item-prod__image--contain">
-                            <img src="img/content/mostpop-small-02.webp" alt="Most popular product picture">
-                        </div>
-                        <a class="item-prod__about-product" href="#">
-                            Embossed hoop earrings
-                        </a>
-                        <span>
+                        <a class="item-prod__card" href="#">
+                            <div class="item-prod__image">
+                                <img src="img/content/mostpop-02.webp" alt="Most popular product picture">
+                            </div>
+                            <h4 class="item-prod__about-product">
+                                Embossed hoop earrings
+                            </h4>
+                            <span>
                             $144.00
                         </span>
+                        </a>
                     </div>
                     <div class="content-prod__item item-prod">
-                        <div class="item-prod__image item-prod__image--contain">
-                            <img src="img/content/mostpop-small-03.webp" alt="Most popular product picture">
-                        </div>
-                        <a class="item-prod__about-product" href="#">
-                            Embossed hoop earrings
-                        </a>
-                        <span>
+                        <a class="item-prod__card" href="#">
+                            <div class="item-prod__image">
+                                <img src="img/content/mostpop-03.webp" alt="Most popular product picture">
+                            </div>
+                            <h4 class="item-prod__about-product">
+                                Embossed hoop earrings
+                            </h4>
+                            <span>
                             $144.00
                         </span>
+                        </a>
                     </div>
                     <div class="content-prod__item item-prod">
-                        <div class="item-prod__image item-prod__image--contain">
-                            <img src="img/content/mostpop-small-04.webp" alt="Most popular product picture">
-                        </div>
-                        <a class="item-prod__about-product" href="#">
-                            Embossed hoop earrings
-                        </a>
-                        <span>
+                        <a class="item-prod__card" href="#">
+                            <div class="item-prod__image">
+                                <img src="img/content/mostpop-04.webp" alt="Most popular product picture">
+                            </div>
+                            <h4 class="item-prod__about-product">
+                                Embossed hoop earrings
+                            </h4>
+                            <span>
                             $144.00
                         </span>
+                        </a>
+                    </div>
+                    <div class="content-prod__item item-prod">
+                        <a class="item-prod__card" href="#">
+                            <div class="item-prod__image">
+                                <img src="img/content/mostpop-04.webp" alt="Most popular product picture">
+                            </div>
+                            <h4 class="item-prod__about-product">
+                                Embossed hoop earrings
+                            </h4>
+                            <span>
+                            $144.00
+                        </span>
+                        </a>
                     </div>
                 </div>
-
+                <div class="popular-prod__link link">
+                    <a class="link__view" href="#" target="_blank">
+                        View More
+                    </a>
+                </div>
             </div>
         </div>
 
