--- a/lesson-18/index.html
+++ b/lesson-18/index.html
@@ -91,14 +91,44 @@
                     </span>
                 </a>
             </div>
+            <button class="header__icon-menu icon-menu" type="button">
+                <span></span>
+            </button>
         </div>
     </header>
     <!--    Main. Page-->
     <main class="page">
+        <div class="page__hero hero">
+            <div class="hero__container">
+                <div class="hero__body">
+                    <h1 class="hero__title">
+                        Jewellery
+                        Collection
+                    </h1>
+                    <a class="hero__button" href="#">
+                        Shop Now
+                    </a>
+                </div>
+                <div class="hero__image">
+                    <img src="img/content/content-hero-main.png" alt="Girl demonstrate jewellery">
+                </div>
+                <div class="hero__content content-hero">
+                    <div class="content-hero__text">
+                        <p>
+                            There are many variations of passages of Lorem Ipsum available, but the majority
+                        </p>
+                    </div>
+                    <div class="content-hero__item">
+                        Handcrafted
+                        & ethically Sources
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer">
-
     </footer>
 </div>
+<script src="js/script.js"></script>
 </body>
 </html>
