--- a/lesson-18/individ.html
+++ b/lesson-18/individ.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-individ.css">
     <title>Lesson 18</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
                 <div class="menu__body">
                     <ul class="menu__list list">
                         <li class="list__item list__item--active">
-                            <a class="list__link" href="individ.html" target="_blank">
+                            <a class="list__link" href="index.html" target="_blank">
                                 Home
                             </a>
                         </li>
@@ -78,61 +78,56 @@
                 </div>
             </div>
             <div class="header__action action">
-                <a class="action__item" href="#">
-                    <img src="img/icons/header-favorite.png" alt="To favorite">
-                    <span id="quantity-fav">
-                        1
-                    </span>
-                </a>
-                <a class="action__item" href="#">
-                    <img src="img/icons/header-cart.svg" alt="To cart">
-                    <span id="quantity-cart">
-                        1
-                    </span>
-                </a>
+                <button class="action__button" type="button">
+                    <a class="action__link action__link--display" href="#">
+                        Log In
+                    </a>
+                    <img class="action__image" src="img/icons/log-in.svg" alt="Log In">
+                </button>
+                <button class="action__icon-menu icon-menu" type="button">
+                    <span></span>
+                </button>
             </div>
-            <button class="header__icon-menu icon-menu" type="button">
-                <span></span>
-            </button>
         </div>
     </header>
     <!--    Main. Page-->
     <main class="page">
-        <div class="page__hero hero">
-            <div class="hero__container">
-                <div class="hero__body body">
-                    <div class="body__decor decor">
-                        <img class="decor__left" src="img/icons/decor-01.svg" alt="Background decor">
-                        <img class="decor__right" src="img/icons/decor-02.svg" alt="Background decor">
-                    </div>
-                    <h1 class="hero__title">
-                        Jewellery
-                        Collection
+        <div class="page__individual individual">
+            <div class="individual__container">
+                <div class="individual__content content">
+                    <h1 class="content__title">
+                        Individual
+                        Jewelry Design
                     </h1>
-                    <a class="hero__button" href="#">
-                        Shop Now
-                    </a>
-                    <div class="body__image">
-                        <img src="img/content/hero-left.png" alt="Girl demonstrate jewellery">
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the majority have
+                        suffered
+                    </p>
+                    <div class="content__action action">
+                        <a class="action__link action__link--padding" href="#" target="_blank">
+                            Shop Now
+                        </a>
+                        <a class="action__link action__link--style" href="#" target="_blank">
+                            Video Now
+                        </a>
+
                     </div>
                 </div>
-                <div class="hero__image image">
-                    <img src="img/content/hero-main.png" alt="Girl demonstrate jewellery">
-                </div>
-                <div class="hero__content content-hero">
-                    <div class="content-hero__text">
-                        <p>
-                            There are many variations of passages of Lorem Ipsum available, but the majority
-                        </p>
+                <div class="individual__picture picture">
+                    <div class="picture__left">
+                        <img class="picture__image" src="img/content/individual-01.png" alt="Product picture">
                     </div>
-                    <div class="content-hero__item">
-                        Handcrafted <br> & ethically Sources
+                    <div class="picture__right">
+                        <img class="picture__image" src="img/content/individual-02.png" alt="Product picture">
                     </div>
                 </div>
             </div>
         </div>
     </main>
     <footer class="footer">
+        <h6 class="footer__title">
+            © 2021 Pamia+ All rights reserved.
+        </h6>
     </footer>
 </div>
 <script src="js/script.js"></script>
