--- a/lesson-18/individ.html
+++ b/lesson-18/individ.html
@@ -115,10 +115,10 @@
                 </div>
                 <div class="individual__picture picture">
                     <div class="picture__left">
-                        <img class="picture__image" src="img/content/individual-01.png" alt="Product picture">
+                        <img class="picture__image" src="img/content/individual-01.webp" alt="Product picture">
                     </div>
                     <div class="picture__right">
-                        <img class="picture__image" src="img/content/individual-02.png" alt="Product picture">
+                        <img class="picture__image" src="img/content/individual-02.webp" alt="Product picture">
                     </div>
                 </div>
             </div>
