--- a/lesson-18/index.html
+++ b/lesson-18/index.html
@@ -102,8 +102,8 @@
             <div class="hero__container">
                 <div class="hero__body body">
                     <div class="body__decor decor">
-                        <img class="decor__left" src="img/icons/decor-01.svg" alt="Background decor">
-                        <img class="decor__right" src="img/icons/decor-02.svg" alt="Background decor">
+                        <img class="decor__left" src="img/decor-01.svg" alt="Background decor">
+                        <img class="decor__right" src="img/decor-02.svg" alt="Background decor">
                     </div>
                     <h1 class="hero__title">
                         Jewellery
@@ -112,12 +112,9 @@
                     <a class="hero__button" href="#">
                         Shop Now
                     </a>
-                    <div class="body__image">
-                        <img src="img/content/hero-left.png" alt="Girl demonstrate jewellery">
-                    </div>
                 </div>
                 <div class="hero__image image">
-                    <img src="img/content/hero-main.png" alt="Girl demonstrate jewellery">
+                    <img src="img/content/hero-main.webp" alt="Girl demonstrate jewellery">
                 </div>
                 <div class="hero__content content-hero">
                     <div class="content-hero__text">
@@ -133,6 +130,9 @@
         </div>
     </main>
     <footer class="footer">
+        <h6 class="footer__title">
+            Copyright © 2022 pretty stonese All Rights Reserved.
+        </h6>
     </footer>
 </div>
 <script src="js/script.js"></script>
