--- a/lesson-18/index.html
+++ b/lesson-18/index.html
@@ -126,6 +126,16 @@
                         Handcrafted <br> & ethically Sources
                     </div>
                 </div>
+                <div class="hero__side-content side-content">
+                    <div class="side-content__wrapper">
+                        <div class="side-content__left">
+                            <img class="image__left" src="img/content/hero-left.webp" alt="Girl demonstrate jewellery">
+                        </div>
+                        <div class="side-content__right">
+                            <img class="image__right" src="img/content/hero-right.png" alt="Girl demonstrate jewellery">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
