--- a/lesson-18/index.html
+++ b/lesson-18/index.html
@@ -128,10 +128,10 @@
                 </div>
                 <div class="hero__side-content side-content">
                     <div class="side-content__left">
-                        <img class="image__left" src="img/content/hero-left.webp" alt="Girl demonstrate jewellery">
+                        <img src="img/content/hero-left.webp" alt="Girl demonstrate jewellery">
                     </div>
                     <div class="side-content__right">
-                        <img class="image__right" src="img/content/hero-right.webp" alt="Girl demonstrate jewellery">
+                        <img src="img/content/hero-right.webp" alt="Girl demonstrate jewellery">
                     </div>
                 </div>
             </div>
