--- a/lesson-19/index.html
+++ b/lesson-19/index.html
@@ -19,42 +19,64 @@
     <main class="page">
         <div class="page__hero hero">
             <div class="hero__container">
-                                <div class="hero__content content">
-                <div class="content__item item">
-                    <img class="item__image" src="img/content/hero-left.webp" alt="High coziness picture">
-                    <div class="item__info info info--left">
-                        <h3 class="info__subtitle">
-                            Low Price
-                        </h3>
-                        <h2 class="info__title">
-                            High Coziness
-                        </h2>
-                        <span>
+                <div class="hero__content content">
+                    <div class="content__item item">
+                        <img class="item__image" src="img/content/hero-left.webp" alt="High coziness picture">
+                        <div class="overlay overlay__yellow"></div>
+                        <div class="item__info info info--left">
+                            <h3 class="info__subtitle">
+                                Low Price
+                            </h3>
+                            <h2 class="info__title">
+                                High Coziness
+                            </h2>
+                            <span>
                             UPTO 50% OFF
                             </span>
-                        <a class="info__link" href="#" target="_blank">
-                            Explore Items
-                        </a>
+                            <a class="info__link" href="#" target="_blank">
+                                Explore Items
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="content__item item">
-                    <img class="item__image" src="img/content/hero-right.webp" alt="Breezy summer style picture">
-                    <div class="item__info info info--right">
-                        <h3 class="info__subtitle info__subtitle--right">
-                            Be young Presents
-                        </h3>
-                        <h2 class="info__title">
-                            Breezy Summer
-                            Style
-                        </h2>
-                        <span>
+                    <div class="content__item item">
+                        <img class="item__image item__image--right" src="img/content/hero-right.webp"
+                             alt="Breezy summer style picture">
+                        <div class="item__info info info--right">
+                            <h3 class="info__subtitle info__subtitle--right">
+                                Be young Presents
+                            </h3>
+                            <h2 class="info__title">
+                                Breezy Summer
+                                Style
+                            </h2>
+                            <span>
                             UPTO 50% OFF
                             </span>
-                        <a class="info__link" href="#" target="_blank">
-                            Explore Items
-                        </a>
+                            <a class="info__link" href="#" target="_blank">
+                                Explore Items
+                            </a>
+                        </div>
                     </div>
-                </div>
+                    <div class="content__item item">
+                        <img class="item__image item__image--right" src="img/content/hero-right.webp"
+                             alt="Breezy summer style picture">
+                        <div class="overlay overlay__purple"></div>
+                        <div class="item__info info info--right">
+                            <h3 class="info__subtitle info__subtitle--right">
+                                Be young Presents
+                            </h3>
+                            <h2 class="info__title">
+                                Breezy Summer
+                                Style
+                            </h2>
+                            <span>
+                            UPTO 50% OFF
+                            </span>
+                            <a class="info__link" href="#" target="_blank">
+                                Explore Items
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -67,25 +89,25 @@
                 </div>
                 <div class="new-arrival__content content">
                     <div class="content__item-new">
-                        <img class="content__image" src="img/content/new-arrival-01.webp" alt="New arrival product">
+                        <img class="content__image" src="img/content/new-arrival-01.png" alt="New arrival product">
                         <h4 class="content__title">
                             Knitted Joggers
                         </h4>
                     </div>
                     <div class="content__item-new">
-                        <img class="content__image" src="img/content/new-arrival-02.webp" alt="New arrival product">
+                        <img class="content__image" src="img/content/new-arrival-02.png" alt="New arrival product">
                         <h4 class="content__title">
                             Full Sleeve
                         </h4>
                     </div>
                     <div class="content__item-new">
-                        <img class="content__image" src="img/content/new-arrival-03.webp" alt="New arrival product">
+                        <img class="content__image" src="img/content/new-arrival-03.png" alt="New arrival product">
                         <h4 class="content__title">
                             Active T-Shirts
                         </h4>
                     </div>
                     <div class="content__item-new">
-                        <img class="content__image" src="img/content/new-arrival-04.webp" alt="New arrival product">
+                        <img class="content__image" src="img/content/new-arrival-04.png" alt="New arrival product">
                         <h4 class="content__title">
                             Urban Shirts
                         </h4>
