--- a/lesson-19/index.html
+++ b/lesson-19/index.html
@@ -22,7 +22,7 @@
                 <div class="hero__content content">
                     <div class="content__item item">
                         <img class="item__image" src="img/content/hero-left.webp" alt="High coziness picture">
-                        <div class="overlay overlay__yellow"></div>
+                        <div class="item__overlay"></div>
                         <div class="item__info info info--left">
                             <h3 class="info__subtitle">
                                 Low Price
@@ -41,6 +41,7 @@
                     <div class="content__item item">
                         <img class="item__image item__image--right" src="img/content/hero-right.webp"
                              alt="Breezy summer style picture">
+                        <div class="item__overlay"></div>
                         <div class="item__info info info--right">
                             <h3 class="info__subtitle info__subtitle--right">
                                 Be young Presents
@@ -58,9 +59,9 @@
                         </div>
                     </div>
                     <div class="content__item item">
-                        <img class="item__image item__image--right" src="img/content/hero-right.webp"
+                        <img class="item__image item__image--right" src="img/example-2.jpg"
                              alt="Breezy summer style picture">
-                        <div class="overlay overlay__purple"></div>
+                        <div class="item__overlay"></div>
                         <div class="item__info info info--right">
                             <h3 class="info__subtitle info__subtitle--right">
                                 Be young Presents
