--- a/lesson-24/index.html
+++ b/lesson-24/index.html
@@ -57,7 +57,7 @@
                 <div class="content__item">
                     <p>
                         Задача №4:
-                        Створіть функцію, яка повертає результат ділення числа a на число b з додаванням рядка
+                        Створіть функцію, яка повертає результат ділення числа "a" на число "b" з додаванням рядка
                         "Результат ділення: "
                     </p>
                     <div class="content__example">
