--- a/lesson-24/index.html
+++ b/lesson-24/index.html
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <h2 class="content__description">
-                    Відповіді в "console.log"
+                    Відповіді в "console"
                 </h2>
             </div>
         </div>
