--- a/lesson-19/index.html
+++ b/lesson-19/index.html
@@ -58,26 +58,26 @@
                             </a>
                         </div>
                     </div>
-                    <div class="content__item item">
-                        <img class="item__image item__image--right" src="img/example-2.jpg"
-                             alt="Breezy summer style picture">
-                        <div class="item__overlay"></div>
-                        <div class="item__info info info--right">
-                            <h3 class="info__subtitle info__subtitle--right">
-                                Be young Presents
-                            </h3>
-                            <h2 class="info__title">
-                                Breezy Summer
-                                Style
-                            </h2>
-                            <span>
-                            UPTO 50% OFF
-                            </span>
-                            <a class="info__link" href="#" target="_blank">
-                                Explore Items
-                            </a>
-                        </div>
-                    </div>
+<!--                    <div class="content__item item">-->
+<!--                        <img class="item__image item__image&#45;&#45;right" src="img/example-2.jpg"-->
+<!--                             alt="Breezy summer style picture">-->
+<!--                        <div class="item__overlay"></div>-->
+<!--                        <div class="item__info info info&#45;&#45;right">-->
+<!--                            <h3 class="info__subtitle info__subtitle&#45;&#45;right">-->
+<!--                                Be young Presents-->
+<!--                            </h3>-->
+<!--                            <h2 class="info__title">-->
+<!--                                Breezy Summer-->
+<!--                                Style-->
+<!--                            </h2>-->
+<!--                            <span>-->
+<!--                            UPTO 50% OFF-->
+<!--                            </span>-->
+<!--                            <a class="info__link" href="#" target="_blank">-->
+<!--                                Explore Items-->
+<!--                            </a>-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
@@ -89,29 +89,57 @@
                     </h2>
                 </div>
                 <div class="new-arrival__content content">
-                    <div class="content__item-new">
+                    <a class="content__item-new" href="#">
                         <img class="content__image" src="img/content/new-arrival-01.png" alt="New arrival product">
                         <h4 class="content__title">
                             Knitted Joggers
                         </h4>
-                    </div>
-                    <div class="content__item-new">
+                    </a>
+                    <a class="content__item-new" href="#">
                         <img class="content__image" src="img/content/new-arrival-02.png" alt="New arrival product">
                         <h4 class="content__title">
                             Full Sleeve
                         </h4>
-                    </div>
-                    <div class="content__item-new">
+                    </a>
+                    <a class="content__item-new" href="#">
                         <img class="content__image" src="img/content/new-arrival-03.png" alt="New arrival product">
                         <h4 class="content__title">
                             Active T-Shirts
                         </h4>
-                    </div>
-                    <div class="content__item-new">
+                    </a>
+                    <a class="content__item-new" href="#">
                         <img class="content__image" src="img/content/new-arrival-04.png" alt="New arrival product">
                         <h4 class="content__title">
                             Urban Shirts
                         </h4>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="page__saving saving">
+            <div class="saving__container">
+                <div class="saving__about about">
+                    <h2 class="about__title">
+                        Big Saving Zone
+                    </h2>
+                </div>
+                <div class="saving__content content">
+                    <div class="content__item item">
+                        <img class="item__image" src="img/content/saving-01.webp" alt="Product picture">
+                        <!--                        <div class="item__overlay"></div>-->
+                        <div class="item__info info info--left">
+                            <h2 class="info__saving-title">
+                                Hawaiian
+                                Shirts
+                            </h2>
+                            <div class="info__text">
+                                Dress up in summer vibe
+                            </div>
+                            <span>
+                                UPTO 50% OFF
+                            </span>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -122,8 +150,8 @@
         <h6 class="footer__title">
             Copyright © 2023 Euphoria Folks Pvt Ltd. All rights reserved.
         </h6>
-
     </footer>
+<!--    <script src="js/script.js"></script>-->
 </div>
 </body>
 </html>
